--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.5/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.5/angular-animate.min.js"></script>
-    <script src="bower_components/d3/d3.js"></script>
+    <script src="d3.js"></script>
     <script src="myApp.js"></script>
     <script src="graphDirective.js"></script>
 
@@ -18,29 +18,33 @@
   <header>
       <h2>Weather App</h2>
     </header>
-    <div class='container-fluid' ng-controller="appController">
+    <div class='main container-fluid' ng-controller="appController">
       <form id='form' class='col-sm-5 col-centered'>
         <input class='text' placeholder='Enter city, state' ng-model='location' type='text' required>
         <input type='submit' ng-click='updateForecast(location)' value='Submit'>
       </form>
       <div id='city' ng-show='weatherData.cityName'>{{weatherData.cityName}}</div>
-      <table class='forecast-panel col-sm-5 col-centered table-responsive' ng-repeat='forecast in weatherData.forecast'>
-        <col width="46%" />
-        <col width="27%" />
-        <col width="27%" />
-        <tr>
-          <td class='dayOfWeek' rowspan='2'>{{forecast.dayOfWeek}}</td>
-          <td class='iconTemp' colspan='2'>
-            <img class='icon' ng-src='http://openweathermap.org/img/w/{{forecast.icon}}.png' height='60px' width='60px'>
-            <span class='avgTemp'>{{forecast.main}}</span>
-          </td>
-        </tr>
-        <tr>
-          <td class='minMaxTemp'>High: {{forecast.maxTemp}}&deg Low: {{forecast.minTemp}}&deg</td>
-          <td class='humidity'>Humidity: {{forecast.humidity}}%</td> 
-        </tr>
-      </table>
-      <cr-d3-bars data='myData'></cr-d3-bars>
+      <div class='col-sm-6'>
+        <table class='forecast-panel table-responsive' ng-repeat='forecast in weatherData.forecast'>
+          <col width="46%" />
+          <col width="27%" />
+          <col width="27%" />
+          <tr>
+            <td class='dayOfWeek' rowspan='2'>{{forecast.dayOfWeek}}</td>
+            <td class='iconTemp' colspan='2'>
+              <img class='icon' ng-src='http://openweathermap.org/img/w/{{forecast.icon}}.png' height='60px' width='60px'>
+              <span class='avgTemp'>{{forecast.main}}</span>
+            </td>
+          </tr>
+          <tr>
+            <td class='minMaxTemp'>High: {{forecast.maxTemp}}&deg Low: {{forecast.minTemp}}&deg</td>
+            <td class='humidity'>Humidity: {{forecast.humidity}}%</td> 
+          </tr>
+        </table>
+      </div>
+      <div class='main col-sm-6'>
+        <graph-directive class='graph' ng-if='weatherData.forecast[4]' data='weatherData.forecast'></graph-directive>
+      </div>
     </div>
   </body>
 </html>
